--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "clsx": "2.1.1",
     "lightweight-charts": "4.2.1",
     "lucide-react": "0.408.0",
-    "next": "14.2.4",
+    "next": "^14.2.35",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "2.12.7",
